@@ -6,6 +6,8 @@ Version 1.5.1+svn:
    * rewrote the textbox history saving of the new widget library. This rewrite
      is incompatible with the old version, but since the library is still in
      development, no compatibility layer has been added.
+   * Added gui to choose where server binary is
+   * Added type-a-head search to file chooser dialog
    * Added recursion preventarion to [kill] fire_event=yes [/kill]
 
 Version 1.5.1:
